# rcli

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: Deploy.yml  release.yml  test.yml
src/: lib.rs  main.rs
