dependencies = {}

[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = [
  "ymc-github <ymc.github@gmail.com>",
  "yemiancheng <ymc.github@gmail.com>",
]
description = "a project name rcli"
license = "mit"
repository = "https://github.com/ymc-github/rcli"
homepage = "https://github.com/ymc-github/rcli"
documentation = "https://github.com/ymc-github/rcli"
keywords = ["rcli", "demo"]
categories = ["cli", "rcli", "demo"]

[[bin]]
name = "rcli"
path = "src/main.rs"
